--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "aos": "^2.3.4",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
     "framer-motion": "^7.6.15",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "sass": "^1.53.0"
   }
 }
